feat: Add OTA upload option

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,10 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+; monitor_port = "/dev/cu.usbserial-0001"
+monitor_speed = 115200
+upload_protocol = espota
+upload_port = 192.168.1.190
 
 lib_deps = 
     adafruit/Adafruit MCP23017 Arduino Library @ ^2.3.2
